# routes/api.php
@@ -27,7 +27,7 @@ Route::get('/cities', [CityController::class, 'index']);
 Route::get('/degrees', [DegreeController::class, 'index']);
 
 Route::controller(UserController::class)->group(function () {
-	Route::get('/cvs/{user:token}', 'index');
+	Route::get('/cvs', 'index');
 	Route::get('/cv/{user:id}', 'get');
-	Route::post('/cvs/{user:token}', 'store');
+	Route::post('/cvs', 'store');
 });
